Integrate AWS S3 file management: add upload, list, download and delete routes with Fastify

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/multipart": "^9.3.0",
+    "aws-sdk": "^2.1692.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "mongoose": "^8.20.0"
