--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "notes-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "tsx watch src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +13,17 @@
   "dependencies": {
     "@fastify/multipart": "^9.3.0",
     "aws-sdk": "^2.1692.0",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
-    "mongoose": "^8.20.0"
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^8.20.0",
+    "validator": "^13.15.23"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "@types/jsonwebtoken": "^9.0.10",
+    "nodemon": "^3.1.11",
+    "tsx": "^4.21.0"
   }
 }
